<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    tools:context=".ui.EditPersonActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shape_rounded_rectangle_blue"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toStartOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_rounded_rectangle_blue"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toBottomOf="@+id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintTop_toTopOf="@+id/etFirstName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_rounded_rectangle_blue"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/rgGender"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        tools:layout_editor_absoluteX="10dp" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton2"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:id="@+id/rbtnMale"
            android:buttonTint="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/male"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:buttonTint="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/rbtnFemale"
            android:text="@string/female"
            android:textColor="@color/white" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_rectangle"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>